# pingman

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
src/: cli.rs  config.rs  main.rs  pinger.rs  proxy_reader.rs  test_results.rs
