[package]
name = "proxy-pinger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = ["full"] }
reqwest = { version = "0.11.3" }
anyhow = "1.0.41"
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"
futures = "0.3.15"