[package]
name = "pingman"
version = "1.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = ["full"] }
reqwest = { version = "0.11.3" }
anyhow = "1.0.41"
serde = { version = "1.0.126", features = ["derive"] }
futures = "0.3.15"
serde_json = "1.0.64"
clap = "3.0.0-beta.2"
owo-colors = "3.2.0"